# name: TestClickhouseStickiness.test_aggregate_by_groups
  '
  /* user_id:0 request:_snapshot_ */
  SELECT countDistinct(aggregation_target),
         num_intervals
  FROM
    (SELECT e."$group_0" AS aggregation_target,
            countDistinct(toStartOfWeek(toDateTime(timestamp, 'UTC'))) as num_intervals
     FROM events e
     WHERE team_id = 2
       AND timestamp >= toDateTime('2020-01-01 00:00:00')
       AND timestamp <= toDateTime('2020-02-15 23:59:59')
       AND event = 'watched movie'
       AND (NOT has([''], "$group_0"))
     GROUP BY aggregation_target)
  WHERE num_intervals <= 8
  GROUP BY num_intervals
  ORDER BY num_intervals SETTINGS optimize_move_to_prewhere = 0
  '
---
# name: TestClickhouseStickiness.test_aggregate_by_groups.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT aggregation_target AS actor_id
  FROM
    (SELECT e."$group_0" AS aggregation_target,
            countDistinct(toStartOfWeek(toDateTime(timestamp, 'UTC'))) as num_intervals
     FROM events e
     WHERE team_id = 2
       AND timestamp >= toDateTime('2020-01-01 00:00:00')
       AND timestamp <= toDateTime('2020-02-15 23:59:59')
       AND event = 'watched movie'
       AND (NOT has([''], "$group_0")
            AND NOT has([''], "$group_0"))
     GROUP BY aggregation_target)
  WHERE num_intervals = 1
  LIMIT 100
  OFFSET 0 SETTINGS optimize_move_to_prewhere = 0
  '
---
# name: TestClickhouseStickiness.test_aggregate_by_groups.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT aggregation_target AS actor_id
  FROM
    (SELECT e."$group_0" AS aggregation_target,
            countDistinct(toStartOfWeek(toDateTime(timestamp, 'UTC'))) as num_intervals
     FROM events e
     WHERE team_id = 2
       AND timestamp >= toDateTime('2020-01-01 00:00:00')
       AND timestamp <= toDateTime('2020-02-15 23:59:59')
       AND event = 'watched movie'
       AND (NOT has([''], "$group_0")
            AND NOT has([''], "$group_0"))
     GROUP BY aggregation_target)
  WHERE num_intervals = 2
  LIMIT 100
  OFFSET 0 SETTINGS optimize_move_to_prewhere = 0
  '
---
# name: TestClickhouseStickiness.test_aggregate_by_groups.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT aggregation_target AS actor_id
  FROM
    (SELECT e."$group_0" AS aggregation_target,
            countDistinct(toStartOfWeek(toDateTime(timestamp, 'UTC'))) as num_intervals
     FROM events e
     WHERE team_id = 2
       AND timestamp >= toDateTime('2020-01-01 00:00:00')
       AND timestamp <= toDateTime('2020-02-15 23:59:59')
       AND event = 'watched movie'
       AND (NOT has([''], "$group_0")
            AND NOT has([''], "$group_0"))
     GROUP BY aggregation_target)
  WHERE num_intervals = 3
  LIMIT 100
  OFFSET 0 SETTINGS optimize_move_to_prewhere = 0
  '
---
# name: TestClickhouseStickiness.test_filter_by_group_properties
  '
  /* user_id:0 request:_snapshot_ */
  SELECT countDistinct(aggregation_target),
         num_intervals
  FROM
    (SELECT e.person_id AS aggregation_target,
            countDistinct(toStartOfWeek(toDateTime(timestamp, 'UTC'))) as num_intervals
     FROM events e
     WHERE team_id = 2
       AND timestamp >= toDateTime('2020-01-01 00:00:00')
       AND timestamp <= toDateTime('2020-02-15 23:59:59')
       AND event = 'watched movie'
       AND (has(['technology'], replaceRegexpAll(JSONExtractRaw(group0_properties, 'industry'), '^"|"$', '')))
     GROUP BY aggregation_target)
  WHERE num_intervals <= 8
  GROUP BY num_intervals
  ORDER BY num_intervals SETTINGS optimize_move_to_prewhere = 0
  '
---
# name: TestClickhouseStickiness.test_filter_by_group_properties.1
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT aggregation_target AS actor_id
  FROM
    (SELECT e.person_id AS aggregation_target,
            countDistinct(toStartOfWeek(toDateTime(timestamp, 'UTC'))) as num_intervals
     FROM events e
     WHERE team_id = 2
       AND timestamp >= toDateTime('2020-01-01 00:00:00')
       AND timestamp <= toDateTime('2020-02-15 23:59:59')
       AND event = 'watched movie'
       AND (has(['technology'], replaceRegexpAll(JSONExtractRaw(group0_properties, 'industry'), '^"|"$', '')))
     GROUP BY aggregation_target)
  WHERE num_intervals = 1
  LIMIT 100
  OFFSET 0 SETTINGS optimize_move_to_prewhere = 0
  '
---
# name: TestClickhouseStickiness.test_filter_by_group_properties.2
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT aggregation_target AS actor_id
  FROM
    (SELECT e.person_id AS aggregation_target,
            countDistinct(toStartOfWeek(toDateTime(timestamp, 'UTC'))) as num_intervals
     FROM events e
     WHERE team_id = 2
       AND timestamp >= toDateTime('2020-01-01 00:00:00')
       AND timestamp <= toDateTime('2020-02-15 23:59:59')
       AND event = 'watched movie'
       AND (has(['technology'], replaceRegexpAll(JSONExtractRaw(group0_properties, 'industry'), '^"|"$', '')))
     GROUP BY aggregation_target)
  WHERE num_intervals = 2
  LIMIT 100
  OFFSET 0 SETTINGS optimize_move_to_prewhere = 0
  '
---
# name: TestClickhouseStickiness.test_filter_by_group_properties.3
  '
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT aggregation_target AS actor_id
  FROM
    (SELECT e.person_id AS aggregation_target,
            countDistinct(toStartOfWeek(toDateTime(timestamp, 'UTC'))) as num_intervals
     FROM events e
     WHERE team_id = 2
       AND timestamp >= toDateTime('2020-01-01 00:00:00')
       AND timestamp <= toDateTime('2020-02-15 23:59:59')
       AND event = 'watched movie'
       AND (has(['technology'], replaceRegexpAll(JSONExtractRaw(group0_properties, 'industry'), '^"|"$', '')))
     GROUP BY aggregation_target)
  WHERE num_intervals = 3
  LIMIT 100
  OFFSET 0 SETTINGS optimize_move_to_prewhere = 0
  '
---
# name: TestClickhouseStickiness.test_timezones
  '
  
  SELECT countDistinct(aggregation_target),
         num_intervals
  FROM
    (SELECT e.person_id AS aggregation_target,
            countDistinct(toStartOfDay(toDateTime(timestamp, 'UTC'))) as num_intervals
     FROM events e
     WHERE team_id = 2
       AND timestamp >= toDateTime('2021-05-01 00:00:00')
       AND timestamp <= toDateTime('2021-05-15 23:59:59')
       AND event = '$pageview'
     GROUP BY aggregation_target)
  WHERE num_intervals <= 16
  GROUP BY num_intervals
  ORDER BY num_intervals SETTINGS optimize_move_to_prewhere = 0
  '
---
# name: TestClickhouseStickiness.test_timezones.1
  '
  
  SELECT countDistinct(aggregation_target),
         num_intervals
  FROM
    (SELECT e.person_id AS aggregation_target,
            countDistinct(toStartOfDay(toDateTime(timestamp, 'US/Pacific'))) as num_intervals
     FROM events e
     WHERE team_id = 2
       AND timestamp >= toDateTime('2021-05-01 07:00:00')
       AND timestamp <= toDateTime('2021-05-16 06:59:59')
       AND event = '$pageview'
     GROUP BY aggregation_target)
  WHERE num_intervals <= 16
  GROUP BY num_intervals
  ORDER BY num_intervals SETTINGS optimize_move_to_prewhere = 0
  '
---
